# trading-with-kiwoom-api

./: .gitignore  README.md
backend/: README.md  dockerfile  pyproject.toml  pytest.ini
backend/src/: manage.py
backend/src/_core/: api.py  asgi.py  router.py  settings.py  urls.py  wsgi.py
backend/src/a_stocks/: apps.py
backend/src/a_stocks/_router/: stocks.py
backend/src/a_stocks/_schema/: stock_schema.py
backend/src/a_stocks/_service/: stock_service.py
backend/src/a_stocks/_utils/: kiwoom_api.py
backend/src/tests/: conftest.py  test_kiwoom_api.py
